--- a/Source/Headspring.BulkWriter/Headspring.BulkWriter.csproj
+++ b/Source/Headspring.BulkWriter/Headspring.BulkWriter.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BulkWriterOptions.cs" />
     <Compile Include="EnumerableDataWriter.cs" />
     <Compile Include="EnumeratorDataReader.cs" />
     <Compile Include="IPropertyToOrdinalMappings.cs" />
