- Implemented code suggested in pull request by ChrisMissal - Added some safety checks - Cleaned up some code

--- a/Source/Headspring.BulkWriter.Nhibernate/Headspring.BulkWriter.Nhibernate.csproj
+++ b/Source/Headspring.BulkWriter.Nhibernate/Headspring.BulkWriter.Nhibernate.csproj
@@ -9,10 +9,11 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Headspring.BulkWriter.Nhibernate</RootNamespace>
     <AssemblyName>Headspring.BulkWriter.Nhibernate</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -22,6 +23,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -48,8 +50,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BulkCopyFactoryOptions.cs" />
     <Compile Include="DbSchemaRow.cs" />
     <Compile Include="DbSchemaTable.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="IPropertyValueGetter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropertyToOrdinalMappings.cs" />
