Correcting some namespaces

--- a/src/BulkWriterDemo/BulkWriter.Demo.csproj
+++ b/src/BulkWriterDemo/BulkWriter.Demo.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -7,10 +7,11 @@
     <ProjectGuid>{09FA9E48-9696-4E1E-A1DB-B4D8ACE96B18}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BulkWriterDemo</RootNamespace>
-    <AssemblyName>BulkWriterDemo</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <RootNamespace>BulkWriter.Demo</RootNamespace>
+    <AssemblyName>BulkWriter.Demo</AssemblyName>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -46,13 +47,16 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="DatabaseScript.sql" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\BulkWriter\BulkWriter.csproj">
       <Project>{a232d2ea-6e54-4941-9496-4db98122b14c}</Project>
-      <Name>Headspring.BulkWriter</Name>
+      <Name>BulkWriter</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="DatabaseScript.sql" />
+    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
