--- a/src/BulkWriter/BulkWriter.csproj
+++ b/src/BulkWriter/BulkWriter.csproj
@@ -10,6 +10,7 @@
     <PackageLicenseUrl>https://github.com/HeadspringLabs/bulk-writer/blob/master/LICENSE</PackageLicenseUrl>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>git://github.com/HeadspringLabs/bulk-writer</RepositoryUrl>
+    <PackageIconUrl>https://github.com/HeadspringLabs/bulk-writer/raw/master/logo.png</PackageIconUrl>
   </PropertyGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
     <Reference Include="System" />
