--- a/src/BulkWriter/BulkWriter.csproj
+++ b/src/BulkWriter/BulkWriter.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <VersionPrefix>1.0.2</VersionPrefix>
+    <Version>1.0.2.*</Version>
     <Authors>Headspring</Authors>
     <TargetFrameworks>net452;netstandard1.3</TargetFrameworks>
     <Summary>LINQ to SQL bulk copy</Summary>
