--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,3 +24,6 @@ deploy:
     secure: t3blEIQiDIYjjWhOSTTtrcAnzJkmSi+0zYPxC1v4RDzm6oI/gIpD6ZtrOGsYu2jE
   on:
     appveyor_repo_tag: true
+skip_commits:
+  files:
+    - docs/*
