Set output type to exe for Demo project so that it can be executed correctly and set as startup project.

--- a/src/BulkWriter.Demo/BulkWriter.Demo.csproj
+++ b/src/BulkWriter.Demo/BulkWriter.Demo.csproj
@@ -2,6 +2,9 @@
   <PropertyGroup>
     <TargetFramework>net461</TargetFramework>
     <LangVersion>latest</LangVersion>
+    <ApplicationIcon />
+    <OutputType>Exe</OutputType>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\BulkWriter\BulkWriter.csproj" />
