--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,4 +37,9 @@ steps:
 # PIPELINE FOLLOW-UP
 # -------------------
 
-
+task: PublishTestResults@2
+  inputs:
+    testResultsFormat: 'xUnit 2'
+    testResultsFiles: '$(Build.SourcesDirectory)\build\results\**\*.xml'
+  condition: succeededOrFailed()
+  displayName: Publish Test Results to Pipeline
