Update azure-pipelines.yml for Azure Pipelines
fixed the publish test results task

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,9 +37,9 @@ steps:
 # PIPELINE FOLLOW-UP
 # -------------------
 
-task: PublishTestResults@2
+- task: PublishTestResults@2
   inputs:
-    testResultsFormat: 'xUnit 2'
+    testResultsFormat: 'XUnit'
     testResultsFiles: '$(Build.SourcesDirectory)\build\results\**\*.xml'
   condition: succeededOrFailed()
   displayName: Publish Test Results to Pipeline
