--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,7 @@ trigger:
     - '*-deploy'
 
 pr:
+- 'development'
 - 'master'
 
 pool:
@@ -31,6 +32,18 @@ steps:
     script: $(Build.SourcesDirectory)/setup.ps1
   displayName: Install Dependencies for Feature Work
 
+- task: UseDotNet@2
+  displayName: Require .NET 2.0
+  inputs:
+    packageType: 'runtime'
+    version: '2.0.x'
+
+- task: UseDotNet@2
+  displayName: Require .NET 3.0 SDK for Build Process
+  inputs:
+    packageType: 'sdk'
+    version: '3.0.x'
+
 - task: NuGetCommand@2
   displayName: 'Authenticate with NuGet feed'
   inputs:
@@ -41,10 +54,11 @@ steps:
 # -------------------
 # RUN PSAKE SCRIPT
 # -------------------
-   
+
 - task: BatchScript@1
   inputs:
     filename: .\psake.cmd
+    arguments: 'Run-CI'
   displayName: Run Abbreviated PSAKE Build for Feature Work
 
 # -------------------
