Added build agent CI Task
Added new CI task for build agent
Replaced spaces with tab spaces
updated release version

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,6 +45,7 @@ steps:
 - task: BatchScript@1
   inputs:
     filename: .\psake.cmd
+    arguments: 'Run-CI'
   displayName: Run Abbreviated PSAKE Build for Feature Work
 
 # -------------------
