--- a/nuget.config
+++ b/nuget.config
@@ -2,6 +2,6 @@
 <configuration>
   <packageSources>
     <clear />
-    <add key="BulkWriterPrivateFeed" value="bulk-writer/_packaging/BulkWriterPrivateFeed/nuget/v3/index.json" />
+    <add key="BulkWriterPrivateFeed" value="https://pkgs.dev.azure.com/headspring-internal/bulk-writer/_packaging/BulkWriterPrivateFeed/nuget/v3/index.json" />
   </packageSources>
 </configuration>
