--- a/nuget.config
+++ b/nuget.config
@@ -2,6 +2,7 @@
 <configuration>
   <packageSources>
     <clear />
-    <add key="BulkWriterPrivateFeed" value="https://pkgs.dev.azure.com/headspring-internal/bulk-writer/_packaging/BulkWriterPrivateFeed/nuget/v3/index.json" />
+    <add key="sashankbandhakavi" value="https://pkgs.dev.azure.com/sashankbandhakavi/_packaging/sashankbandhakavi/nuget/v3/index.json" />
+    <!--<add key="BulkWriterPrivateFeed" value="https://pkgs.dev.azure.com/headspring-internal/bulk-writer/_packaging/BulkWriterPrivateFeed/nuget/v3/index.json" />-->
   </packageSources>
 </configuration>
