Set configuration to pack to Release instead of Debug.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -73,6 +73,7 @@ steps:
   inputs:
     command: pack
     packagesToPack: '$(Build.SourcesDirectory)/src/BulkWriter/BulkWriter.csproj'
+    configurationToPack: Release
   displayName: Create Nuget Package
 
 
