Updated theme configuration
Using the remote_theme setting avoids a GH Pages build issue due to just-the-docs not being an official GH Pages theme.
Specifying the url and baseurl will allow static assets to be resolved correctly once the GH Pages site is deployed.
Enabling search doesn't require any further configurations.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -15,12 +15,15 @@
 # in the templates via {{ site.myvariable }}.
 title: "Bulk Writer"
 description: "Bulk Writer is a small library which facilitates building fast, pull-based ETL processes in C#."
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/bulk-writer" # the subpath of your site, e.g. /blog
+url: "https://headspringlabs.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 markdown: kramdown
-theme: just-the-docs
+remote_theme: pmarsceill/just-the-docs
+
+# Just the Docs Settings
+search_enabled: true
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
