--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -24,6 +24,7 @@ remote_theme: pmarsceill/just-the-docs
 
 # Just the Docs Settings
 search_enabled: true
+footer_content: "Copyright &copy; 2020 Headspring."
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
