--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -25,6 +25,13 @@ remote_theme: pmarsceill/just-the-docs
 # Just the Docs Settings
 search_enabled: true
 footer_content: "Copyright &copy; 2020 Headspring."
+logo: "assets/images/logo.png"
+
+defaults:
+  - scope:
+      path: "assets/images"
+    values:
+      image: true
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
