--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: "Bulk Writer"
-description: "Bulk Writer is a small library which facilitates building fast, pull-based ETL processes in C#."
+description: "Bulk Writer is a small library which facilitates building fast, memory-efficient, pull-based ETL processes in C#."
 baseurl: "/bulk-writer" # the subpath of your site, e.g. /blog
 url: "https://headspringlabs.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
