Adding enumerable support

--- a/src/BulkWriter.Benchmark/BulkWriter.Benchmark.csproj
+++ b/src/BulkWriter.Benchmark/BulkWriter.Benchmark.csproj
@@ -8,7 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.12.0" />
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.2" />
+    <PackageReference Include="System.Linq.Async" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
